# LLM-Controlled-Robot

./: README.md  key  key.pub
.github/workflows/: claude.yml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/motor_driver/lib/motor_driver/: keyboard_controller  motor_driver_node  ultrasonic_controller  ultrasonic_node
install/motor_driver/share/motor_driver/: package.sh
install/py_hello_world/lib/py_hello_world/: hello_pub  hello_sub
install/py_hello_world/share/py_hello_world/: package.dsv  package.ps1  package.sh  package.xml
install/ultrasonic_control/lib/ultrasonic_control/: motor_driver  ultrasonic_publisher
install/ultrasonic_control/share/ultrasonic_control/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
ros2_ws/: .gitignore
ros2_ws/src/claude_ros/: CLAUDE.md  README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/claude_ros/claude_ros/: claude_agent_node.py
ros2_ws/src/claude_ros/launch/: claude_ros.launch.py
ros2_ws/src/hbridge_diff_drive/: package.xml  setup.cfg  setup.py
ros2_ws/src/hbridge_diff_drive/hbridge_diff_drive/: driver_gpio_node.py  forward_until_obstacle_node.py  hcsr04_node.py
ros2_ws/src/hbridge_diff_drive/launch/: robot_full.launch.py
ros2_ws/src/motor_driver/: package.xml  setup.py
ros2_ws/src/motor_driver/motor_driver/: keyboard_controller.py  motor_driver_node.py  ultrasonic_node.py
ros2_ws/src/py_hello_world/: setup.py
ros2_ws/src/ultrasonic_control/: setup.cfg  setup.py
ros2_ws/src/ultrasonic_control/launch/: bringup.launch.py
(+2 files in other folders)
