<?xml version="1.0"?>
<package format="3">
  <name>hbridge_diff_drive</name>
  <version>0.1.0</version>
  <description>All-in-one: H-bridge motor driver, ultrasonic publisher, and forward-until-obstacle controller.</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
</package>
